Crash in [@ strlen | nsCharTraits<T>::length] via nsImapServerResponseParser::mailbox and nsImapServerResponseParser::ParseIMAPServerResponse(
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird_esr115 affected, thunderbird_esr128+ wontfix, thunderbird131+ fixed)
People
(Reporter: wsmwk, Assigned: mkmelin, NeedInfo)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Reporter of this crash ~~~indicates importing outlook data.~~~ states "Thunderbird updated, and now refuses to start, so I now have no access to my e-mail. "
Crash report: https://crash-stats.mozilla.org/report/index/cdaef368-8b27-470e-a5a9-4f2af0240711
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames:
0 ucrtbase.dll strlen
1 xul.dll nsCharTraits<char>::length(char const*) xpcom/string/nsCharTraits.h:423
1 xul.dll nsTDependentString<char>::nsTDependentString(char const*) xpcom/string/nsTDependentString.h:76
1 xul.dll nsImapServerResponseParser::mailbox(nsImapMailboxSpec*) mailnews/imap/src/nsImapServerResponseParser.cpp:788
2 xul.dll nsImapServerResponseParser::mailbox_list(bool) mailnews/imap/src/nsImapServerResponseParser.cpp:772
3 xul.dll nsImapServerResponseParser::response_data() mailnews/imap/src/nsImapServerResponseParser.cpp:447
4 xul.dll nsImapServerResponseParser::ParseIMAPServerResponse(char const*, bool, char*) mailnews/imap/src/nsImapServerResponseParser.cpp:189
5 xul.dll nsImapProtocol::List(char const*, bool, bool) mailnews/imap/src/nsImapProtocol.cpp:7676
6 xul.dll nsImapProtocol::DiscoverMailboxList() mailnews/imap/src/nsImapProtocol.cpp:7267
7 xul.dll nsImapProtocol::ProcessAuthenticatedStateURL() mailnews/imap/src/nsImapProtocol.cpp:7893
| Reporter | ||
Updated•2 years ago
|
Updated•2 years ago
|
| Reporter | ||
Comment 1•2 years ago
|
||
This isn't a new crash signature, but the stack might be new.
| Assignee | ||
Comment 2•2 years ago
|
||
https://searchfox.org/comm-central/rev/03e5119a09c3feee0c67484fe23705f9723e6e73/mailnews/imap/src/nsImapServerResponseParser.cpp#788
CreateAstring() at https://searchfox.org/comm-central/rev/03e5119a09c3feee0c67484fe23705f9723e6e73/mailnews/imap/src/nsImapGenericParser.cpp#172 must be returning null
We should check null before using it for nsDependentCString - which will crash when sent null as parameter.
| Reporter | ||
Comment 3•1 year ago
|
||
A few users' crash comments state they only started crashing with version 128.
bp-63601022-3113-461e-9dff-6400a0240617 is using davmail and beta builds.
Crashes are often at startup
| Assignee | ||
Comment 4•1 year ago
|
||
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
| Reporter | ||
Updated•1 year ago
|
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
| Reporter | ||
Comment 5•1 year ago
|
||
How would you feel about taking this to today's beta? Or, does it need a couple days on daily?
| Reporter | ||
Updated•1 year ago
|
| Reporter | ||
Comment 6•1 year ago
|
||
Any thoughts on a possible workaround, given that this often happens on startup?
| Assignee | ||
Comment 7•1 year ago
|
||
It shouldn't be a problem but I would give it two days or so on daily.
I don't know exactly what would cause it.
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/5dbcfc60b279
Fix Crash in [@ strlen | nsCharTraits<T>::length] via nsImapServerResponseParser::mailbox and nsImapServerResponseParser::ParseIMAPServerResponse. r=tobyp
| Assignee | ||
Comment 9•1 year ago
|
||
Comment on attachment 9424619 [details]
Bug 1907691 - Fix Crash in [@ strlen | nsCharTraits<T>::length] via nsImapServerResponseParser::mailbox and nsImapServerResponseParser::ParseIMAPServerResponse. r=tobyp
[Approval Request Comment]
User impact if declined: may crash
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): should be safe
Comment 10•1 year ago
|
||
Comment on attachment 9424619 [details]
Bug 1907691 - Fix Crash in [@ strlen | nsCharTraits<T>::length] via nsImapServerResponseParser::mailbox and nsImapServerResponseParser::ParseIMAPServerResponse. r=tobyp
[Triage Comment]
Approved for beta
Comment 11•1 year ago
|
||
| bugherder uplift | ||
Thunderbird 131.0b5:
https://hg.mozilla.org/releases/comm-beta/rev/6c21e3299b4e
Comment 12•1 year ago
|
||
Comment on attachment 9424619 [details]
Bug 1907691 - Fix Crash in [@ strlen | nsCharTraits<T>::length] via nsImapServerResponseParser::mailbox and nsImapServerResponseParser::ParseIMAPServerResponse. r=tobyp
[Triage Comment]
Approved for esr128
Comment 13•1 year ago
|
||
| bugherder uplift | ||
Thunderbird 128.3.0esr:
https://hg.mozilla.org/releases/comm-esr128/rev/4f004e83ed9f
Comment 14•1 year ago
|
||
I looks like this crash bug got introduced by bug 1907691, which uses nsDependentCString with a null string parameter.
The patch for bug 1853365 needs to get re-reviewed, to check for other places where nsDependentCString might get potentially used with a null pointer.
| Assignee | ||
Comment 15•1 year ago
|
||
Please back out https://hg.mozilla.org/releases/comm-esr128/rev/4f004e83ed9f from 128. We'll handle the rest in bug 1921739.
Comment 16•1 year ago
|
||
| Assignee | ||
Updated•1 year ago
|
| Reporter | ||
Updated•1 year ago
|
Comment 17•1 year ago
|
||
Comment on attachment 9424619 [details]
Bug 1907691 - Fix Crash in [@ strlen | nsCharTraits<T>::length] via nsImapServerResponseParser::mailbox and nsImapServerResponseParser::ParseIMAPServerResponse. r=tobyp
Removing approval flag per comments 15-16.
Comment 18•1 year ago
|
||
| bugherder uplift | ||
Thunderbird 128.3.2esr:
https://hg.mozilla.org/releases/comm-esr128/rev/89d4cf9ebada
Comment 19•1 year ago
|
||
Hello,
Are there any specific STR that QA could perform in order to reproduce the faulty behaviour(crash) on an affected build and properly verify and confirm that it is fixed?
Description
•