Bug 1907691 - Fix Crash in [@ strlen | nsCharTraits<T>::length] via nsImapServerResponseParser::mailbox and nsImapServerResponseParser::ParseIMAPServerResponse. r=tobyp

Differential Revision: https://phabricator.services.mozilla.com/D222093

--HG--
extra : rebase_source : 741e023bb1b07f6cebab8a4d8404ebffb4c403a4